2008-02-20  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c: (capture_interesting_frame):
	Add better debug

2008-02-20  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_open_with_subtitle):
	Patch from Peter Williams <peter@newton.cx> to fix icyx://
	playback

2008-02-20  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: For the DivX
	web player, force the viewer to open the file
	itself, as it would allow it to seek

2008-02-20  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/idl/totemIMullYPlayer.idl:
	Implement from documentation
	* browser-plugin/totemMullYPlugin.cpp:
	Implement stubs for the DivX Web Player Javascript
	interface (Closes: #354856)

	* browser-plugin/totemConePlugin.cpp:
	Fix warning

2008-02-18  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (main): Set up the recent files manager
	earlier, not after we try to add stuff to it when starting
	up with arguments...

2008-02-17  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	  (bacon_video_widget_get_mrls):
	  Don't use the GST_TIME_AS_SECONDS macro for now, since
	  it only appeared in GStreamer 0.10.16. (Closes: #516853)

2008-02-17  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/totem-playlist.c: (drop_cb):
	* src/totem.c: (totem_action_drop_files): Use
	g_uri_list_extract_uris instead of gnome_vfs_uri_list_parse
	for drop targets. (Closes: #512600)

2008-02-17  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/totem.c: (main): Patch from Riccardo Lucchese
	to set up the recent files list later on in startup.
	(Helps: #514087)

2008-02-15  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/org_gnome_totem_PluginViewer.xml:
	* browser-plugin/totem-plugin-viewer-constants.h:
	* browser-plugin/totempluginviewer-marshal.list:
	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_class_init), (totem_embedded_save_volume),