@@ -1,5 +1,13 @@
 2008-02-20  Bastien Nocera  <hadess@hadess.net>
 
+	* src/backend/bacon-video-widget-gst-0.10.c:
+	(bacon_video_widget_can_play):
+	Check for flupsdemux version, if it's installed, if it's
+	not installed, fall-through as the missing-plugins will
+	be triggered
+
+2008-02-20  Bastien Nocera  <hadess@hadess.net>
+
 	* src/totem-video-thumbnailer.c: (capture_interesting_frame):
 	Add better debug
 
